--- a/myblog.css
+++ b/myblog.css
@@ -98,6 +98,8 @@ header span {
   display: flex;
   border: 1px solid #8888887e;
   margin: 0px 15px;
+  justify-content: flex-start;
+  align-items: center;
 }
 .popposts img {
   width: 60px;
@@ -106,7 +108,6 @@ header span {
   object-fit: cover;
 }
 .popposts p {
-  line-height: 80px;
   font-size: 20px;
   font-family: Cambria;
   font-style: italic;
@@ -135,7 +136,6 @@ header span {
 }
 .readmore {
   padding: 14px 20px;
-  margin: 15px 25px;
   border: 2px solid red;
   font-family: helvetica;
   font-size: 16px;
@@ -151,11 +151,8 @@ header span {
   color: white;
 }
 .comments {
-  float: right;
-  margin-right: 60px;
   font-size: 22px;
   font-family: cambria;
-  line-height: 60px;
   color: #ffafbd;
 }
 .comments span {
@@ -190,4 +187,10 @@ footer button:hover {
 .ad {
   background-color: #c9ffbf;
   padding: 4px;
+}
+.buttoncomments{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 50px;
 }
